<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_default"
    tools:context="br.com.etm.myappportfolio.MainActivity"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_title"
        android:text="@string/my_nonodegree_apps"
        android:id="@+id/textView" />

    <Button
        android:id="@+id/bt_popular_movies"
        android:text="@string/popular_movies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:background="@color/colorAccent"
        android:onClick="openMyApp"/>

    <Button
        android:id="@+id/bt_stock_hawk"
        android:text="@string/stock_hawk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:background="@color/colorAccent"
        android:onClick="openMyApp"/>

    <Button
        android:id="@+id/bt_buid_it"
        android:text="@string/build_it_bigger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:background="@color/colorAccent"
        android:onClick="openMyApp"/>

    <Button
        android:id="@+id/bt_app_material"
        android:text="@string/make_your_app_material"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:background="@color/colorAccent"
        android:onClick="openMyApp"/>

    <Button
        android:id="@+id/bt_go_ubiquitous"
        android:text="@string/go_ubiquitous"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:background="@color/colorAccent"
        android:onClick="openMyApp"/>

    <Button
        android:id="@+id/bt_my_own_app"
        android:text="@string/capstone_my_own_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:background="@color/colorAccentDark"
        android:onClick="openMyApp"/>
</LinearLayout>
